--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site Simpels music</title>
+    <style>
+      /*DEfiniçao do estilo da pagina*/
+      body {
+        font-family: Arial, sans-serif;/*Definir fonte do texto*/
+      }
+    </style>
 </head>
 <body>
-    
+   <!--Titulo principal-->
+    <h1>World</h1>
+    <!--Mudara o fundo da pagina-->
+    <button onclick="mudarCor()">Mudar Cor de Fundo</button>
 </body>
 </html>
