--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       /*DEfiniçao do estilo da pagina*/
       body {
         font-family: Arial, sans-serif;/*Definir fonte do texto*/
-      }
+        text-align: center; /*Centralizar o texto*/
+        margin: 50px;/*Definir uma margem ao redor do conteudo*/
+        
+       }
     </style>
 </head>
 <body>
