--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
         font-family: Arial, sans-serif;/*Definir fonte do texto*/
         text-align: center; /*Centralizar o texto*/
         margin: 50px;/*Definir uma margem ao redor do conteudo*/
-        
+        background-color: #f4f4f4; /*Definir a cor de fundo padrão*/
+       }
+       /*estilizar o botão*/
+       button{
+         padding: 10px 20px; /*Define o tamanho do botão*/
+        font-size: 16px; /*Define o tamanho da fonte do botão*/
+        cursor: pointer; /*Alterar o cursor ao passar belo botão*/
+        background-color: blueviolet; /*Definir a cor de fundo*/
+        color: aliceblue; /*Definir a cor texto do botão*/
+        border: none; /*Remover a borda do botão*/
+        border-radius: 5px; /*Adicionar cantos arredondados*/
+
        }
     </style>
 </head>
 <body>
    <!--Titulo principal-->
-    <h1>World</h1>
+    <h1>Bem vindo ao primeiro site</h1>
     <!--Mudara o fundo da pagina-->
     <button onclick="mudarCor()">Mudar Cor de Fundo</button>
 </body>
